blog/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

figcaption {
    display: none;
}

body {
    font-family: Roboto, sans-serif;
    padding: 5vw;
    display: grid;
    grid-template-columns: 10fr 1fr;
    height: 100vh;
}

body p {
    padding-top: 0.5em;
    font-size: 1.2em;
}

main {
    margin-bottom: 3em;
}

main img {
    width: 100%;
    padding-top: 0.5em;
    max-height: 700px;
}

main pre {
    padding-top: 0.5em;
    font-size: 1.2em;
}

main ul {
    padding-left: 1em;
    font-size: 1.2em;
}

main ul li {
    padding-top: 0.5em;
}

main ol {
    padding-left: 1em;
}

main hr {
    margin-top: 1em;
}

main div {
    max-width: 700px;
    margin: auto;
    padding-bottom: 1em;
}

h1 {
    font-size: 3em;
}

h2 {
    padding-top: 1.5em;
    font-size: 1.8em;
}

h3 {
    padding-top: 1.3em;
    font-size: 1.5em;
}

h4 {
    padding-top: 1.2em;
    font-size: 1.2em;
}

nav ul {
    list-style: none;
    text-align: right;
}

nav ul li {
    padding: 2px;
}

a {
    text-decoration: none;
    color: #007bff;
}

@media (max-width: 1000px) {
    body {
        display: block;
        padding-top: 3em;
    }
    body h1 {
        text-align: center;
    }
    nav {
        position: absolute;
        top: 1em;
        right: 0;
        left: 0;
        display: block;
        text-align: right;
        margin-left: auto;
        margin-right: auto;
        max-width: 342px;
    }
    nav ul li {
        display: block;
        margin-right: 0;
    }
    nav ul {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        text-align: center;
        
    }
}

